# cloud_match_engine

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
engine/: CMakeLists.txt  Dockerfile
engine/src/: MatchEngine.cpp  MatchEngine.h  MatchService.cpp  MatchService.h  main.cpp
engine/tests/: test_match_engine.cpp
gateway/: Dockerfile  pom.xml
gateway/src/main/java/com/matchengine/: GatewayApplication.java
gateway/src/main/java/com/matchengine/controller/: MatchController.java
gateway/src/main/java/com/matchengine/model/: MatchRequestDto.java  MatchResponseDto.java  MatchResultDto.java
gateway/src/main/java/com/matchengine/service/: MatchGrpcClient.java
gateway/src/main/resources/: application.yml
gateway/src/test/java/com/matchengine/: MatchControllerTest.java
k8s/: gateway.yaml  match-engine.yaml
proto/: match.proto
